# flight-analysis

./: .RData  .Rhistory  .gitignore  README.md  analysis.R  deploy.R  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: publish.yml
.github/workflows/scripts/: release.py
API/: api.py
automation/: auto.py
docs/: analysis.html  cache.html  db.html  index.html  scrape.html
src/: cache_dev.py  flight_analysis.py  scrape_dev.py  scraping.py
src/google_flight_analysis/: cache.py  scrape.py
tests/: test_class.py
