[metadata]
name = gha-python-packaging-demo
description = Demo of a simple way to use GitHub Actions to build your Python package, bump the version number, and publish it to GitHub releases and PyPI.org all with a single click of a button in the web interface.
long_description_content_type = text/markdown
url = https://github.com/kcelebi/flight_analysis
project_urls =
    Bug Tracker = https://github.com/kcelebi/flight_analysis/issues
    Changelog = https://github.com/kcelebi/flight_analysis/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gha_python_packaging_demo = gha_python_packaging_demo.app:entry_point