[metadata]
name = flight-analysis
description = Scraping flight data from Google Flights and analyzing.
long_description_content_type = text/markdown
url = https://github.com/kcelebi/flight_analysis
project_urls =
    Bug Tracker = https://github.com/kcelebi/flight_analysis/issues
    Changelog = https://github.com/kcelebi/flight_analysis/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flight_analysis = flight_analysis.app:entry_point